--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,7 @@
 @import "jekyll-theme-primer";
 
 #classSelectionIcon {
-  max-width: calc(100% / 6);
+  max-width: 16.66%;
   border-width: 2%;
 }
 
