--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,10 +4,10 @@
 @import "jekyll-theme-primer";
 
 .classSelectionIcon {
-  max-width: 16.66%;
-  border-width: 2%;
+  //max-width: 16.66%;
+  //border-width: 2%;
 }
 
 .classSelectionIcon:after {
-  padding-bottom: 100%;
+  //padding-bottom: 100%;
 }
