--- a/siteCSS.css
+++ b/siteCSS.css
@@ -1,22 +1,22 @@
 @font-face {
-    font-family: 'Pirata One';
-    src: url('fonts/PirataOne-Regular.eot');
-    src: url('fonts/PirataOne-Regular.eot?#iefix') format('embedded-opentype'),
-        url('fonts/PirataOne-Regular.woff2') format('woff2'),
-        url('fonts/PirataOne-Regular.woff') format('woff'),
-        url('fonts/PirataOne-Regular.svg#PirataOne-Regular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Pirata One';
+  src: url('fonts/PirataOne-Regular.eot');
+  src: url('fonts/PirataOne-Regular.eot?#iefix') format('embedded-opentype'),
+      url('fonts/PirataOne-Regular.woff2') format('woff2'),
+      url('fonts/PirataOne-Regular.woff') format('woff'),
+      url('fonts/PirataOne-Regular.svg#PirataOne-Regular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
     font-family: 'Nyala';
-    src: url('/fonts/Nyala-Regular.eot');
-    src: url('/fonts/Nyala-Regular.eot?#iefix') format('embedded-opentype'),
-        url('/fonts/Nyala-Regular.woff2') format('woff2'),
-        url('/fonts/Nyala-Regular.woff') format('woff'),
-        url('/fonts/Nyala-Regular.svg#Nyala-Regular') format('svg');
+    src: url('fonts/Nyala-Regular.eot');
+    src: url('fonts/Nyala-Regular.eot?#iefix') format('embedded-opentype'),
+        url('fonts/Nyala-Regular.woff2') format('woff2'),
+        url('fonts/Nyala-Regular.woff') format('woff'),
+        url('fonts/Nyala-Regular.svg#Nyala-Regular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -39,37 +39,44 @@
 }
 
 .classSelectionIcon {
- width: 90%;
- height: 90%;
- padding: 5%;
- object-fit: contain;
- position: absolute;
- 
+width: 90%;
+height: 90%;
+padding: 5%;
+object-fit: contain;
+position: absolute;
+
 }
 
 .classSelectionIconWrapper {
- width: 100%;
- padding-bottom: 100%;
- position: relative;
+width: 100%;
+padding-bottom: 100%;
+position: relative;
 }
 
 .classSelectionIconWrapperWrapper {
- width: 16.66%;
- border-width: 2%;
- border-style: solid;
- position: relative;
+width: 16.66%;
+border-width: thick;
+border-style: solid;
+position: relative;
 }
 
 .classSelectionLegal {
+  border-color: goldenrod;
+}
+
+.classSelectionLocked {
   border-color: black;
+}
+.classSelectionSelected {
+  border-color: green;
+}
+
+.classSelectionProposed {
+  border-color: firebrick;
 }
 
 .classSelectionIllegal {
   border-color: grey;
-}
-
-.classSelectionSelected {
-  border-color: green;
 }
 
 #deckDisplayBox {
@@ -121,26 +128,89 @@
 }
 
 #controllerBox {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
 }
 
 #deckAdjustingBox {
-  width: 40%;
+  text-align: center;
 }
 
 #deckAdjustingBox div img {
   display: block;
+  width: 20%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 2%;
 }
 
 #perkBox {
   font-size: 120%;
 }
 
+.perkBoxSpoilerWarning {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  background-color: slategrey;
+  padding: 5px;
+}
+
+.perkBoxSpoilerWarning > span, button {
+  margin: 5px;
+}
+
 input:checked {
   content: "■";
 }
 
+#utilityBox {
+  display: flex;
+}
+
+#utilityBox div {
+  margin: auto;
+  text-align: center;
+  flex: 1;
+}
+
 .numberModifier {
   font-family: 'Pirata One';
+}
+
+@media all and (min-width: 800px) {
+  #statsBoxes > div {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: minmax(300px, 3fr) minmax(200px, 2fr);
+  }
+
+  #controllerBox {
+    grid-template-columns: 2fr 3fr;
+  }
+}
+
+@media all and (max-width: 800px) {
+  #controllerBox {
+    grid-template-columns: 1fr;
+  }
+
+  #deckAdjustingBox {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  #perkBox {
+    padding-left: 20%;
+    padding-right: 20%;
+  }
+
+  #utilityBox {
+    flex-direction: column;
+  }
+
+  #statsBox > div {
+    grid-template-columns: 1fr;
+  }
 }
