--- a/siteCSS.css
+++ b/siteCSS.css
@@ -131,6 +131,10 @@ position: relative;
   display: grid;
 }
 
+#baseDeckSwitcher {
+  text-align: center;
+}
+
 #deckAdjustingBox {
   text-align: center;
 }
@@ -187,7 +191,11 @@ input:checked {
   }
 
   #controllerBox {
-    grid-template-columns: 2fr 3fr;
+    grid-template-columns: 3fr 2fr 2fr;
+  }
+
+  #baseDeckSwitcher button {
+    padding: 10%;
   }
 }
 
