Added class 09, added assets for class 10

--- a/siteCSS.css
+++ b/siteCSS.css
@@ -179,6 +179,10 @@ input:checked {
   flex: 1;
 }
 
+#attackValueBox {
+  font-size: 130%;
+}
+
 .numberModifier {
   font-family: 'Pirata One';
 }
